golden/error/_import_cycle_b.rcl
import "_import_cycle_c.rcl"
